<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HU Berlin Wi-Fi Installer</string>

    <string name="TITLE_LOGON">Please login</string>
    <string name="Username">HU-Account*:</string>
    <string name="Password">Password:</string>
    <string name="Install_exists">Overwrite Wi-Fi profile</string>
    <string name="Install_new">Install Wi-Fi profile</string>
    <string name="WIFI_ENABLE_MSG">Wi-Fi disabled. Activate it?</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="NA">N/A</string>
    <string name="BSSID">BSSID</string>
    <string name="ABORT">Abort</string>

    <string name="ABOUT_TITLE">About</string>
    <string name="TROUBLESHOOT_TITLE">Troubleshooting</string>
    <string name="EXIT">Exit</string>

    <string name="ABOUT_CONTENT">eduroam Wi-Fi installer for members of Humboldt University Berlin. This installer is based on "Nikhef eduroam Wi-Fi helper". It installs an eduroam Wi-Fi profile and the necessary certificates.</string>
    <string name="UNCHANGED">Unchanged</string>
    <string name="CHANGED">Changed</string>
    <string name="HU_LOGO">HU Logo</string>
    <string name="USERNAME_HINT">*Members of the institutes of Computer Science, Mathematics or Physics have to append their domain.</string>
    <string name="INST_ABORTED">Installation aborted!</string>
    <string name="INST_ABORTED_LOCK">Installation aborted because of unsecure display lock. Please install a display lock using PIN, password or pattern!</string>
    <string name="INST_ABORTED_WIFI_ENABLE">Couldn\'t enable Wi-Fi! Please enable Wi-Fi and try again.</string>
    <string name="INST_FINISHED">Installation finished successfully.</string>
    <string name="STATUS_IMPORT_CA_CERT">Importing ca certificate...</string>
    <string name="STATUS_WIFI_WAIT">Waiting for Wi-Fi to get enabled...</string>
    <string name="STATUS_INSTALL_PROFILE">Installing Wi-Fi profile...</string>
    <string name="MAC_ADDRESS">mac address</string>
    <string name="TROUBLESHOOT_CONTENT">In case of problems our helpdesk (CMS-Benutzerberatung) will try to help:\n\nphone: 030209370000\nemail: cms-benutzerberatung@hu-berlin.de\n\nHelpful information:</string>
    <string name="ERR_NOT_FOUND">Could not be determined</string>
    <string name="AP">Access Point</string>
    <string name="SSID">Wi-Fi</string>
    <string name="ERR_NO_TROUBLESHOOT">Couldn\'t activate Wi-Fi to collect debug information.</string>
    <string name="TIME">Time</string>
    <string name="IP_ADDRESS">ip address</string>
    <string name="uid">account</string>
    <string name="DLG_WIFI_REMOVE">Could not remove Wi-Fi profile for \"%1$s\".\n\nSince Android 6.0 (Marshmallow) you have to remove already existing Wi-Fi profiles manually, because the app is only allowed to remove profiles it created.\n\nPlease remove profiles for the following Wi-Fi networks:\n%2$s\n\nTo do this long press on the matching entry and tap on \"Forget network\". Press the back button of your device afterwards.</string>
    <string name="WIFI_SETTINGS">Open Wi-Fi preferences</string>
    <string name="INST_FINISHED_REMOVE_LOCK">Installation finished successfully.\n\nYou may now remove the screen lock, if you like. Under Android 6.0 it is only needed during the installation process.\nTo remove screen lock, open security settings and change lock screen type to "swipe".</string>
    <string name="SECURITY_SETTINGS">Open Security Settings</string>
    <string name="ERR_SAVE_CONFIG">Could not save config!</string>
    <string name="channel_name">HU eduroam announcements</string>
    <string name="channel_description">Channel for important announcements regarding eduroam</string>
    <string name="notification_title">Changes in eduroam service</string>
    <string name="notification_text">Overwrite your current eduroam Wi-Fi profiles using our app, if you want to continue using eduroam.</string>
</resources>
